other changes apparently

--- a/docs/colab_notebooks/1-the-basics.ipynb
+++ b/docs/colab_notebooks/1-the-basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2ca47def",
+   "id": "566cf967",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: The Basics\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c07d4d1",
+   "id": "6dc9e12e",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -25,32 +25,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6fdbaff",
+   "id": "965af885",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer"
+    "!pip install -q data-designer \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54f7eb1e",
+   "id": "48b4b70f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up NVIDIA API key from Colab secrets\n",
-    "import os\n",
-    "\n",
     "from google.colab import userdata\n",
     "\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
+    "import os\n",
+    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "04c89e08",
+   "id": "995ab7ce",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -61,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59f952e2",
+   "id": "4fa3d7be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5c741e9",
+   "id": "a05509e3",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -95,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dccabca",
+   "id": "62b77ee5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b872bf95",
+   "id": "2cc36c72",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -121,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f40a46d",
+   "id": "05f87a82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81360ecf",
+   "id": "d6b44559",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -168,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "992ee1bd",
+   "id": "2d5e514b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dbcf838",
+   "id": "1bcb48b3",
    "metadata": {},
    "source": [
     "## 🎲 Getting started with sampler columns\n",
@@ -194,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc9c46f1",
+   "id": "9bd92341",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbcbb073",
+   "id": "f5c6ed39",
    "metadata": {},
    "source": [
     "Let's start designing our product review dataset by adding product category and subcategory columns.\n"
@@ -212,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56983af7",
+   "id": "b9b666af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "275351cc",
+   "id": "da175b7b",
    "metadata": {},
    "source": [
     "Next, let's add samplers to generate data related to the customer and their review.\n"
@@ -302,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6897388a",
+   "id": "98f1ac50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b00a82d2",
+   "id": "12bac21a",
    "metadata": {},
    "source": [
     "## 🦜 LLM-generated columns\n",
@@ -354,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8acf067e",
+   "id": "b413ed5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34764875",
+   "id": "98e77924",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -408,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04a01435",
+   "id": "876ba0f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42ca5d3f",
+   "id": "2af68741",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be9316ed",
+   "id": "5916c3cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed536176",
+   "id": "ac6d7448",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -452,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c763bc92",
+   "id": "cf494d0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfe254fd",
+   "id": "357b2c86",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -475,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c496f62",
+   "id": "84bd7549",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5969af9",
+   "id": "d266d2a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adc4724e",
+   "id": "6328de8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05172306",
+   "id": "1b81038b",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
