--- a/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
+++ b/docs/colab_notebooks/2-structured-outputs-and-jinja-expressions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "581f68ef",
+   "id": "26826211",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Structured Outputs and Jinja Expressions\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59f6ac60",
+   "id": "832b88b4",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,32 +27,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "469f79f8",
+   "id": "969bbbcc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer"
+    "!pip install -q data-designer \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "080d0605",
+   "id": "41748474",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up NVIDIA API key from Colab secrets\n",
-    "import os\n",
-    "\n",
     "from google.colab import userdata\n",
     "\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
+    "import os\n",
+    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "74a9ecdc",
+   "id": "4e8014d8",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -63,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85778bb4",
+   "id": "7352bbf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b60804b9",
+   "id": "14963f9f",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -97,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f695a80c",
+   "id": "eb618d54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b40cb3e3",
+   "id": "caa3f57f",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -123,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d968e2c",
+   "id": "5549152c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c067ce3",
+   "id": "e7c5d645",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -170,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dd6656a",
+   "id": "6ac98165",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7c45860",
+   "id": "bb99873c",
    "metadata": {},
    "source": [
     "### 🧑‍🎨 Designing our data\n",
@@ -206,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d94bdbac",
+   "id": "a1619f2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c659516",
+   "id": "8895a7f0",
    "metadata": {},
    "source": [
     "Next, let's design our product review dataset using a few more tricks compared to the previous notebook.\n"
@@ -243,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "035cdb74",
+   "id": "af32e36e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba758579",
+   "id": "b8241c06",
    "metadata": {},
    "source": [
     "Next, we will use more advanced Jinja expressions to create new columns.\n",
@@ -369,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65a26ff9",
+   "id": "ba29a63d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d35aaba",
+   "id": "4f733458",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -440,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "865ef8c6",
+   "id": "c5efd286",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5f3bdf3",
+   "id": "5245e40f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4a90d96",
+   "id": "07e46b28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +470,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a517c11c",
+   "id": "6388cffb",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -484,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8944d6cd",
+   "id": "4af08e47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f49329ea",
+   "id": "24884cc3",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -507,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08d7aff4",
+   "id": "03f2d0e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3094d4cd",
+   "id": "98db8bc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee48df3c",
+   "id": "0234d630",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a7356d7",
+   "id": "e4f790c7",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
