--- a/docs/colab_notebooks/4-providing-images-as-context.ipynb
+++ b/docs/colab_notebooks/4-providing-images-as-context.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b4dc9a5b",
+   "id": "1e86fc40",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Providing Images as Context for Vision-Based Data Generation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "412786ca",
+   "id": "c59cb50b",
    "metadata": {},
    "source": [
     "#### 📚 What you'll learn\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56484cd1",
+   "id": "109f3eed",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -36,32 +36,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1138042c",
+   "id": "6aa21eed",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer pillow"
+    "!pip install -q data-designer pillow\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24fe27c9",
+   "id": "dd12beef",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up NVIDIA API key from Colab secrets\n",
-    "import os\n",
-    "\n",
     "from google.colab import userdata\n",
     "\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
+    "import os\n",
+    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9157cc75",
+   "id": "c4162d82",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -72,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ad5b4e0",
+   "id": "ecec234b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04e25ed4",
+   "id": "504f1d40",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -116,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "195fc878",
+   "id": "e59c8ab0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bb11458",
+   "id": "71bb9093",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -142,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12dcb08d",
+   "id": "dfceb4f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91a381d1",
+   "id": "08426a33",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -180,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df89f918",
+   "id": "afad97d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c5aae47",
+   "id": "a4e86661",
    "metadata": {},
    "source": [
     "### 🌱 Seed Dataset Creation\n",
@@ -206,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b086e19d",
+   "id": "b906647b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11c74943",
+   "id": "0e2827d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbe25614",
+   "id": "aff5bddf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1118f9f5",
+   "id": "b46db348",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9003a5f8",
+   "id": "93014a2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02b1081b",
+   "id": "b5d75ac8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -340,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a27d5be9",
+   "id": "0bf45f8a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -348,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e235758f",
+   "id": "ce1f9b8f",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -365,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16c5296a",
+   "id": "eb4ebb7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe76f3e3",
+   "id": "28bc690a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c8eb9e6",
+   "id": "572bdc4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d6ca462",
+   "id": "35a24fdd",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -409,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1510a8be",
+   "id": "e3ec9f06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "942c22b2",
+   "id": "10a548d1",
    "metadata": {},
    "source": [
     "### 🔎 Visual Inspection\n",
@@ -430,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bb55fc9",
+   "id": "b0dfa425",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -454,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab1f598c",
+   "id": "b843e820",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -467,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d81afa35",
+   "id": "6856fa9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05929961",
+   "id": "8d656659",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102ae3ac",
+   "id": "9dfa4c11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82453acd",
+   "id": "15fcf9f1",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
