--- a/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
+++ b/docs/colab_notebooks/3-seeding-with-a-dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fef37b50",
+   "id": "b52e3e14",
    "metadata": {},
    "source": [
     "# 🎨 Data Designer Tutorial: Seeding Synthetic Data Generation with an External Dataset\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a35705b",
+   "id": "e8bdd897",
    "metadata": {},
    "source": [
     "### ⚡ Colab Setup\n",
@@ -27,32 +27,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cb8d485",
+   "id": "9f8f43fd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install data-designer and dependencies\n",
-    "!pip install -q data-designer"
+    "!pip install -q data-designer \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04f04275",
+   "id": "5cd30df0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set up NVIDIA API key from Colab secrets\n",
-    "import os\n",
-    "\n",
     "from google.colab import userdata\n",
     "\n",
-    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")"
+    "import os\n",
+    "os.environ[\"NVIDIA_API_KEY\"] = userdata.get(\"NVIDIA_API_KEY\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3a43e9b2",
+   "id": "19140f29",
    "metadata": {},
    "source": [
     "### 📦 Import the essentials\n",
@@ -63,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdc39109",
+   "id": "5111abc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f53729bb",
+   "id": "7c05285e",
    "metadata": {},
    "source": [
     "### ⚙️ Initialize the Data Designer interface\n",
@@ -91,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a59a0f4",
+   "id": "a6d36f9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95d5084d",
+   "id": "737515ef",
    "metadata": {},
    "source": [
     "### 🎛️ Define model configurations\n",
@@ -117,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87d40f27",
+   "id": "ff4d27e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19c68b1d",
+   "id": "05d3f7b5",
    "metadata": {},
    "source": [
     "### 🏗️ Initialize the Data Designer Config Builder\n",
@@ -164,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "524a6cf7",
+   "id": "59a6cf53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2660d181",
+   "id": "0698182b",
    "metadata": {},
    "source": [
     "## 🏥 Prepare a seed dataset\n",
@@ -198,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f494042",
+   "id": "623fb7fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38072683",
+   "id": "24dcb1b2",
    "metadata": {},
    "source": [
     "## 🎨 Designing our synthetic patient notes dataset\n",
@@ -233,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27865737",
+   "id": "773fb7e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a23deb5",
+   "id": "86c89239",
    "metadata": {},
    "source": [
     "### 🔁 Iteration is key – preview the dataset!\n",
@@ -340,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca24bc09",
+   "id": "47cdc500",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5a965ed",
+   "id": "b06eface",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "425b63fa",
+   "id": "e5cafa10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6b326af",
+   "id": "ef9e55d7",
    "metadata": {},
    "source": [
     "### 📊 Analyze the generated data\n",
@@ -384,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fdf5ec8",
+   "id": "993cd27f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b510cc12",
+   "id": "960e2c6c",
    "metadata": {},
    "source": [
     "### 🆙 Scale up!\n",
@@ -407,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1f86e26",
+   "id": "1bd696b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e687b16",
+   "id": "7b1be27a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "550f90f1",
+   "id": "4101f6a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b4b28a5",
+   "id": "857a0ded",
    "metadata": {},
    "source": [
     "## ⏭️ Next Steps\n",
